production date align fix

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,5 +9,12 @@
     background-color: rgba(20,20,20,0.3);
     padding: 35px 30px;
     text-rendering: auto;
+}
 
+.sb-red {
+    box-shadow: 0 0 2px 1px #4d4d4d,
+    0 0 3px 2px #666666,
+    0 0 4px 3px #7b7b7b,
+    0 0 5px 4px #999999,
+    inset 0 0 8px 0 #af3838;
 }
